--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,9 +22,14 @@ bind -n S-Down resize-pane -D
 # toggle status bar
 bind C-b set-option -g status
 
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 # enable 24 bit support
-set -ga terminal-overrides ',*256col*:Tc'
+set -ga terminal-overrides ",xterm-256color*:Tc"
+# set -ga terminal-overrides ',*256col*:Tc'
+# Undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 setw -g mouse on
 
