--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -10,6 +10,9 @@ window:
 shell:
   program: wsl.exe ~
 
+env:
+  TERM: xterm-256color
+
 key_bindings:
   - { key: Space, mods: Control, chars: "\x00" }
   - { key: Key3, mods: Control, chars: "\x1b" }
@@ -48,22 +51,23 @@ schemes:
     normal:
       black: "0x32302f"
       red: "0xea6962"
-
       green: "0xa9b665"
       yellow: "0xd8a657"
+
       blue: "0x7daea3"
       magenta: "0xd3869b"
       cyan: "0x89b482"
       white: "0xd4be98"
     bright:
       black: "0x32302f"
+
       red: "0xea6962"
       green: "0xa9b665"
+
       yellow: "0xd8a657"
       blue: "0x7daea3"
       magenta: "0xd3869b"
       cyan: "0x89b482"
-
       white: "0xd4be98"
   gruvbox_material_medium_dark: &gruvbox_material_medium_dark
     primary:
@@ -74,14 +78,17 @@ schemes:
       red: "0xea6962"
       green: "0xa9b665"
       yellow: "0xd8a657"
+
       blue: "0x7daea3"
       magenta: "0xd3869b"
       cyan: "0x89b482"
       white: "0xd4be98"
     bright:
       black: "0x3c3836"
+
       red: "0xea6962"
       green: "0xa9b665"
+
       yellow: "0xd8a657"
       blue: "0x7daea3"
       magenta: "0xd3869b"
@@ -90,6 +97,7 @@ schemes:
   gruvbox_material_soft_dark: &gruvbox_material_soft_dark
     primary:
       background: "0x32302f"
+
       foreground: "0xd4be98"
     normal:
       black: "0x45403d"
@@ -97,9 +105,11 @@ schemes:
       green: "0xa9b665"
       yellow: "0xd8a657"
       blue: "0x7daea3"
+
       magenta: "0xd3869b"
       cyan: "0x89b482"
       white: "0xd4be98"
+
     bright:
       black: "0x45403d"
       red: "0xea6962"
@@ -113,6 +123,7 @@ schemes:
     primary:
       background: "0xf9f5d7"
       foreground: "0x654735"
+
     normal:
       black: "0x654735"
       red: "0xc14a4a"
@@ -127,6 +138,7 @@ schemes:
       red: "0xc14a4a"
       green: "0x6c782e"
       yellow: "0xb47109"
+
       blue: "0x45707a"
       magenta: "0x945e80"
       cyan: "0x4c7a5d"
@@ -134,6 +146,7 @@ schemes:
   gruvbox_material_medium_light: &gruvbox_material_medium_light
     primary:
       background: "0xfbf1c7"
+
       foreground: "0x654735"
     normal:
       black: "0x654735"
@@ -141,9 +154,11 @@ schemes:
       green: "0x6c782e"
       yellow: "0xb47109"
       blue: "0x45707a"
+
       magenta: "0x945e80"
       cyan: "0x4c7a5d"
       white: "0xeee0b7"
+
     bright:
       black: "0x654735"
       red: "0xc14a4a"
@@ -151,7 +166,6 @@ schemes:
       yellow: "0xb47109"
       blue: "0x45707a"
       magenta: "0x945e80"
-
       cyan: "0x4c7a5d"
       white: "0xeee0b7"
   gruvbox_material_soft_light: &gruvbox_material_soft_light
@@ -172,10 +186,48 @@ schemes:
       red: "0xc14a4a"
       green: "0x6c782e"
       yellow: "0xb47109"
+
       blue: "0x45707a"
       magenta: "0x945e80"
       cyan: "0x4c7a5d"
       white: "0xe6d5ae"
+  catpuccin: &catpuccin # Default colors
+    primary:
+      background: "0x1E1D2F"
+      foreground: "0xD9E0EE"
+
+    # Colors the cursor will use if `custom_cursor_colors` is true
+
+    cursor:
+      text: "0x1E1D2F"
+      cursor: "0xF5E0DC"
+
+    # Normal colors
+    normal:
+      black: "0x6E6C7E"
+      red: "0xF28FAD"
+      green: "0xABE9B3"
+      yellow: "0xFAE3B0"
+      blue: "0x96CDFB"
+      magenta: "0xF5C2E7"
+      cyan: "0x89DCEB"
+      white: "0xD9E0EE"
+
+    # Bright colors
+    bright:
+      black: "0x988BA2"
+
+      red: "0xF28FAD"
+      green: "0xABE9B3"
+      yellow: "0xFAE3B0"
+      blue: "0x96CDFB"
+      magenta: "0xF5C2E7"
+      cyan: "0x89DCEB"
+      white: "0xD9E0EE"
+
+    indexed_colors:
+      - { index: 16, color: "0xF8BD96" }
+      - { index: 17, color: "0xF5E0DC" }
 
 # Apply the color scheme.
-colors: *gruvbox_material_medium_dark
+colors: *catpuccin
