--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -25,8 +25,17 @@ key_bindings:
   - { Key: L, mods: Control|Alt, chars: "\x1b\x0c" }
   - { Key: D, mods: Control|Alt, chars: "\x1b\x04" }
   - { Key: P, mods: Control|Alt, chars: "\x1b\x10" }
+  # Windows
+  # Must have one or the other 
   - { Key: Left, mods: Alt, chars: "\x1b[1;3D" }
   - { Key: Right, mods: Alt, chars: "\x1b[1;3C" }
+  # MacOs
+  # - { key: Left, mods: Alt, chars: "\x1bb" } # Skip word left
+  # - { key: Right, mods: Alt, chars: "\x1bf" } # Skip word right
+  # - { key: Left, mods: Command, chars: "\x1bOH", mode: AppCursor } # Home
+  # - { key: Right, mods: Command, chars: "\x1bOF", mode: AppCursor } # End
+  # - { key: Back, mods: Command, chars: "\x15" } # Delete line
+  # - { key: Back, mods: Alt, chars: "\x1b\x7f" } # Delete word
 
 draw_bold_text_with_bright_colors: true
 
