--- a/alacritty/.config/alacritty.yml
+++ b/alacritty/.config/alacritty.yml
@@ -30,12 +30,17 @@ key_bindings:
   - { Key: Left, mods: Alt, chars: "\x1b[1;3D" }
   - { Key: Right, mods: Alt, chars: "\x1b[1;3C" }
   # MacOs
-  # - { key: Left, mods: Alt, chars: "\x1bb" } # Skip word left
-  # - { key: Right, mods: Alt, chars: "\x1bf" } # Skip word right
-  # - { key: Left, mods: Command, chars: "\x1bOH", mode: AppCursor } # Home
-  # - { key: Right, mods: Command, chars: "\x1bOF", mode: AppCursor } # End
-  # - { key: Back, mods: Command, chars: "\x15" } # Delete line
-  # - { key: Back, mods: Alt, chars: "\x1b\x7f" } # Delete word
+  - { Key: H, mods: Alt, chars: "\x1bh" }
+  - { Key: J, mods: Alt, chars: "\x1bj" }
+  - { Key: K, mods: Alt, chars: "\x1bk" }
+  - { Key: L, mods: Alt, chars: "\x1bl" }
+  - { Key: F, mods: Alt, chars: "\x1bf" }
+  - { key: Left, mods: Alt, chars: "\x1bb" } # Skip word left
+  - { key: Right, mods: Alt, chars: "\x1bf" } # Skip word right
+  - { key: Left, mods: Command, chars: "\x1bOH", mode: AppCursor } # Home
+  - { key: Right, mods: Command, chars: "\x1bOF", mode: AppCursor } # End
+  - { key: Back, mods: Command, chars: "\x15" } # Delete line
+  - { key: Back, mods: Alt, chars: "\x1b\x7f" } # Delete word
 
 draw_bold_text_with_bright_colors: true
 
